--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,11 @@ security:
             custom_authenticator: App\Security\LoginAuthenticator
             logout:
                 path: app_logout
+            remember_me:
+                secret: '%kernel.secret%'
+                path: /
+                secure: true
+
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -35,5 +40,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/projets, roles: ROLE_USER}
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
